# Simple-Rust-Asset-Server

./: .gitignore  Cargo.toml  README.md
.agent/skills/bump-version/: SKILL.md
.github/workflows/: release.yml
src/: main.rs
